--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "@symfony/webpack-encore": "^4.2.0",
         "core-js": "^3.23.0",
         "regenerator-runtime": "^0.13.9",
-        "webpack": "^5.74.0",
+        "webpack": "^5.81.0",
         "webpack-cli": "^4.10.0",
         "webpack-notifier": "^1.15.0"
     },
@@ -21,6 +21,7 @@
     },
     "dependencies": {
         "bootstrap": "^5.2.3",
+        "encore": "^0.0.30-beta",
         "jspdf": "^2.5.1"
     }
 }
